# NucleusKit-ProcessingPipeline

./: .gitignore  LICENSE  README.md  launch_app.bat  pyproject.toml  requirements.txt
doc/: overview.md  pipeline_arousal.md  pipeline_cognition.md  pipeline_emotions.md  pipeline_events.md  pipeline_heart.md  pipeline_positioning.md
nucleuskit_pipeline/: __init__.py  __main__.py  app.py  config.py  logging_utils.py  pipeline.py  session_job.py
nucleuskit_pipeline/camera/: __init__.py  processing.py
nucleuskit_pipeline/events/: __init__.py  eventsProcessor.py
nucleuskit_pipeline/hermes/: HermesConstants.py  constants.py
nucleuskit_pipeline/mqtt/: __init__.py  mqtt_controller.py
nucleuskit_pipeline/position/: __init__.py  gps_processor.py  uwb_processor.py
nucleuskit_pipeline/session/: __init__.py  layout.py
nucleuskit_pipeline/shared/: SignalProcessingUtils.py  __init__.py  file_interface.py  rawEventsUtils.py
nucleuskit_pipeline/shimmer/: __init__.py  constants.py  shimmer_serial_proxy.py
nucleuskit_pipeline/ui/: __init__.py  main_window.py  offline_job.py  realtime_eeg_plot.py  realtime_hermes_motion_plot.py  realtime_shimmer_plot.py  theme.py
referenceCode/MQTTController/: README.md  launchEmotionDataCollection.py  launchNetworkControllerDemo.py  launchTrainingExperience.py
referenceCode/wristbandInterface/: WristbandAdapter.py  WristbandManager.py  WristbandProxy.py
tests/: test_config.py  test_imports.py  test_offline_job.py  test_ppg_heart.py  test_rms_original_ops.py  test_session_video_rotation.py
(+122 files in other folders)
