[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nucleuskit-pipeline"
version = "0.1.0"
description = "Nucleus-Kit offline processing pipeline (Hermes EEG/EMG, Shimmer PPG/EDA)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "opencv-python>=4.8",
    "joblib>=1.3",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.3",
]
gui = [
    "PySide6>=6.5.0",
    "bleak>=0.21",
    "pyqtgraph>=0.13",
    "pyserial>=3.5",
    "paho-mqtt>=1.6",
]

[project.scripts]
nucleuskit-pipeline = "nucleuskit_pipeline.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nucleuskit_pipeline*"]

[tool.setuptools.package-data]
"nucleuskit_pipeline.hermes" = ["emotion/classifier/*"]
"nucleuskit_pipeline.hermes.processorDevelopment.channel_fixer_release" = ["models/*.joblib"]
"nucleuskit_pipeline.ui.resources.branding" = ["*.png"]

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["nucleuskit_pipeline", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
